--- a/_includes/sidebar/widget-gallery.html
+++ b/_includes/sidebar/widget-gallery.html
@@ -1,7 +1,7 @@
 {% if site.gallery %}
 <div class="widget widget-gallery">
   <div class="widget__head">
-    <h4 class="widget__title">{% if site.gallery.name %} {{site.gallery.name}} {% else %}Gallery{% endif %}<span>.</span></h4>
+    <h4 class="widget__title">Gallery<span>.</span></h4>
   </div>
   <div class="gallery-box gallery-sidebar">
     <div class="gallery">
